--- a/Networking_server/Networking_server.csproj
+++ b/Networking_server/Networking_server.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OurChatForm\OurChatForm.csproj">
+      <Project>{765dfe4d-eadd-45a4-b3af-b4fb414b98b1}</Project>
+      <Name>OurChatForm</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
